--- a/About-Me.html
+++ b/About-Me.html
@@ -82,7 +82,7 @@ Counsellor & Psychotherapist | For better mental health and well-being | Counsel
     <div class="container">
         <div class="row justify-content-center">
             <div class="mbr-white col-md-5">
-                <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-5"><div><br></div><div><strong><br></strong></div><br><div><strong>For the therapeutic work to be successful,</strong> choosing the right therapist is key.</div></h1>
+                <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-5"><div><br></div><div><strong><br></strong></div><br><div><strong><br></strong></div><br><div><strong>For the therapeutic work to be successful,</strong> choosing the right therapist is key.</div></h1>
                 
                 
             </div>
