--- a/About-Therapy.html
+++ b/About-Therapy.html
@@ -100,7 +100,7 @@ Counsellor & Psychotherapist | For better mental health and well-being | Counsel
     <div class="container">
         <div class="row justify-content-center">
             <div class="mbr-white col-md-5">
-                <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-5"><strong><br></strong><br><strong>Are you wondering</strong> how counselling or psychotherapy might be helpful to you?<br></h1>
+                <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-5"><strong><br></strong><br><strong><br></strong><br><strong>Are you wondering</strong> how counselling or psychotherapy might be helpful to you?<br></h1>
                 
                 
             </div>
