--- a/Mental-Health-Support-and-Crisis-Information.html
+++ b/Mental-Health-Support-and-Crisis-Information.html
@@ -83,7 +83,7 @@ Counsellor & Psychotherapist | For better mental health and well-being | Counsel
     <div class="container">
         <div class="row justify-content-center">
             <div class="mbr-white col-md-5">
-                <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-5"><br><div><strong><br></strong></div><br><div><strong><br></strong></div><div><strong>Support and Crisis </strong>Information</div></h1>
+                <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-5"><div><strong><br></strong></div><br><br><br><br><br><div><strong>Support and Crisis </strong><span style="font-size: 2rem;">Information</span><br></div></h1>
                 
                 
             </div>
