create github pages

--- a/Mental-Health-Support-and-Crisis-Information.html
+++ b/Mental-Health-Support-and-Crisis-Information.html
@@ -209,7 +209,7 @@ Counsellor & Psychotherapist | For better mental health and well-being | Counsel
     
 </section>
 
-<section class="cid-s1qylKhTZV mbr-parallax-background" id="footer1-he">
+<section class="cid-sbZQVX7Fgw mbr-parallax-background" id="footer1-l3">
 
     
 
@@ -229,7 +229,7 @@ Counsellor & Psychotherapist | For better mental health and well-being | Counsel
                     Practice Location</h5>
                 <p class="mbr-text"><a href="https://www.google.com/maps/place/Wembley+HA0/@51.55178,-0.305155,15z/data=!4m5!3m4!1s0x487611890b1a323b:0xa45fafa821d73691!8m2!3d51.561918!4d-0.312378?hl=en" target="_blank">Wembley</a><strong><b><a href="https://www.google.com/maps/dir///@51.5643972,-0.3241803,15z" target="_blank"><br></a></b></strong></p>
             </div>
-            <div class="col-12 col-md-3 mbr-fonts-style display-7">
+            <div class="col-12 col-md-4 mbr-fonts-style display-7">
                 <h5 class="pb-3">
                     Contacts
                 </h5>
