--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ Counsellor & Psychotherapist | For better mental health and well-being | Counsel
     
 </section>
 
-<section class="cid-rJ2mIAGLMB mbr-parallax-background" id="footer1-7r">
+<section class="cid-sbZRcFQ6PO mbr-parallax-background" id="footer1-l7">
 
     
 
@@ -302,7 +302,7 @@ Counsellor & Psychotherapist | For better mental health and well-being | Counsel
                     Practice Location</h5>
                 <p class="mbr-text"><a href="https://www.google.com/maps/place/Wembley+HA0/@51.55178,-0.305155,15z/data=!4m5!3m4!1s0x487611890b1a323b:0xa45fafa821d73691!8m2!3d51.561918!4d-0.312378?hl=en" target="_blank">Wembley</a><strong><b><a href="https://www.google.com/maps/dir///@51.5643972,-0.3241803,15z" target="_blank"><br></a></b></strong></p>
             </div>
-            <div class="col-12 col-md-3 mbr-fonts-style display-7">
+            <div class="col-12 col-md-4 mbr-fonts-style display-7">
                 <h5 class="pb-3">
                     Contacts
                 </h5>
@@ -311,7 +311,7 @@ Counsellor & Psychotherapist | For better mental health and well-being | Counsel
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">Site Map</h5>
-                <p class="mbr-text"><a href="#top" class="text-white">Home</a><br><a href="About-Therapy.html" class="text-white">About Therapy</a><br><a href="About-Me.html" class="text-white">About Me</a><br><a href="Contact-Me.html" class="text-secondary">Contact me</a><br><a href="Fees.html" class="text-white">Fees</a><br><a href="Mental-Health-Support-and-Crisis-Information.html" class="text-white">Support &amp; Crisis Information</a><a href="page5.html#header4-y" class="text-white"><br></a><br><a href="privacy.html" class="text-secondary">Privacy policy</a><a href="page5.html#header4-y" class="text-white"><br></a><br></p>
+                <p class="mbr-text"><a href="index.html#header4-k5" class="text-white">Home</a><br><a href="About-Therapy.html" class="text-white">About Therapy</a><br><a href="About-Me.html" class="text-white">About Me</a><br><a href="Contact-Me.html" class="text-secondary">Contact me</a><br><a href="Fees.html" class="text-white">Fees</a><br><a href="Mental-Health-Support-and-Crisis-Information.html" class="text-white">Support &amp; Crisis Information</a><a href="page5.html#header4-y" class="text-white"><br></a><br><a href="privacy.html" class="text-secondary">Privacy policy</a><a href="page5.html#header4-y" class="text-white"><br></a><br></p>
             </div>
         </div>
         <div class="footer-lower">
